profile image changed

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Hey. I am Abhishek Gusain, I am 20 year FullStack developer Based in India.
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/mainfest.json"/>
     <title>Abhishek Gusain | Fullstack-Developer</title>
   </head>
   <body>
